--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h3> Hello world</h3>
+  <h3> Hello world!!!!</h3>
+  <strong> Warning! </strong> Represnts a warning that needs attention.
   
 </body>
 </html>
